src/App.css
/* .App {
  text-align: center;
} */
.landing-page-container {
  width: 100%;
  /* background-color:lightblue; */
  display: flex;
  flex-direction: column;
}
.side-nav-col {
  flex-grow: 1;
  margin-right: 4%;
}
.side-nav {
  /* border: solid 2px red; */
  text-align: left;
}
.nav-item {
  width: 100%;
  margin: 2px;
  font-weight: bold;
  padding: 5px;
  text-align: left;
}
.icon{
  margin-right: 10px;
}
.nav-item:first-child{
background-color: #61b3f52b;
border-radius: 5px;
}

.card-col {
  display: inherit;
  flex-direction: column;
  /* border: solid 2px pink; */
  flex-grow: 3;
}
.headings {
  font-weight: bold;
}
.card{
  width: 220px;
  height: 100px;
  /* text-align: center; */
  font-weight: bold;
  padding: 5%;
  margin-right: 2%;
  background-color: #e8e8e8;
}
.card:first-child{
  background: #2283a0;
  color: #ffff;
}
.card-row {
  margin-bottom: 5%;
}
.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #030e11;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

